/*
 * $Id: ChangeLog,v 1.1436 2003/09/10 06:07:25 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-10 10:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    ! Fixed GPF trap in hb_arrayReleaseGarbage()

2003-09-09 23:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
  * source/vm/asort.c
  * source/vm/classes.c
  * source/vm/codebloc.c
  * source/vm/estack.c
  * source/vm/fastitem.c
  * source/vm/hvm.c
  * source/vm/memvars.c
    ! Many revisions and fixes in the way GC handles Codeblocks and Arrays.

  * include/hbapi.h
  * source/vm/thread.c
  * source/vm/hvm.c
    ! Revised termination order so that hb_memvarsFree() is no longer needed.

  * source/vm/proc.c
    ! Fixed GPF trap when called from hb_vmQuit().

  * tests/pp.prg
    * Fixed typo.

2003-09-10 03:00 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * minor formating

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! some bugs with scoping and locking I wrote about on harbour
      mailing list corrected. Please test scopes with DBFNTX it seems
      OK but I'm not sure that changes due to lack of time for deep
      DBFNTX analyzes. IMHO the best person for such fixes is Alexander.

  * xharbour/utils/hbtest/hbtest.prg
    ! REQUEST DBFDBT added for compatibility with the new RDDs

2003-09-09 17:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * makefile.bc
     + Added support for dbfdbt.lib and dbffpt.lib

2003-09-09 13:39 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * xharbour/contrib/libct/Makefile
    ! Fix recent changes in setlast.c to compile under windows.

2003-09-09 05:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * hrbdll.vc
   * hrbdll.bc
     + dbfdbt,dbffpt
   * source/rdd/dbffpt/dbffpt1.c
   * source/rdd/dbfdbt/dbfdbt1.c